--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
     "build:linux": "electron-builder --linux"
   },
   "devDependencies": {
-    "electron": "^30.0.0",
-    "electron-builder": "^24.13.3",
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
+    "electron": "^30.5.1",
+    "electron-builder": "^24.13.3",
+    "electron-vite": "^4.0.0",
+    "nodemon": "^3.1.0",
     "vite": "^5.4.0",
-    "wait-on": "^7.2.0",
-    "nodemon": "^3.1.0"
+    "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "pdfjs-dist": "^4.7.76",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "pdfjs-dist": "^4.7.76"
+    "react-dom": "^18.3.1"
   },
   "build": {
     "appId": "com.vibewriting.app",
@@ -44,14 +45,23 @@
     ],
     "mac": {
       "category": "public.app-category.productivity",
-      "target": ["dmg", "zip"]
+      "target": [
+        "dmg",
+        "zip"
+      ]
     },
     "win": {
-      "target": ["nsis", "zip"]
+      "target": [
+        "nsis",
+        "zip"
+      ]
     },
     "linux": {
       "category": "Utility",
-      "target": ["AppImage", "deb"]
+      "target": [
+        "AppImage",
+        "deb"
+      ]
     }
   }
 }
