--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "openai": "^4.104.0",
     "pdfjs-dist": "^4.7.76",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
